Feat: Add Typography and bulid storybook

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-kuyyeEtj.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DPFCjuPH.js"></script>
   </head>
 
   <body>
