--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DPFCjuPH.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Dk3C2pm8.js"></script>
   </head>
 
   <body>
