--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Cob4A8hU.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BgZeDEW_.js"></script>
   </head>
 
   <body>
